Fix entry-content's .alignfull margin-left bug if has sidebar

--- a/assets/scss/components/_site-main.scss
+++ b/assets/scss/components/_site-main.scss
@@ -18,5 +18,9 @@
     &.is-single {
         margin-right: 15px;
         margin-left: 15px;
+
+        .entry-content > .alignfull {
+            margin-left: -15px;
+        }
     }
 }
