--- a/assets/scss/components/content/_entry-content.scss
+++ b/assets/scss/components/content/_entry-content.scss
@@ -149,7 +149,6 @@
         max-width: 100%;
         padding-left: 0;
         padding-right: 0;
-        margin-left: -15px;
     }
 
     ul,
